# vgicp-gpu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
first/: CMakeLists.txt  run.sh
first/src/: gpu.cu  gpu.h  main.cpp
include/: cov_estimation.cuh  gpu.h  knn_search.cuh  test.cuh
second/: CMakeLists.txt
second/src/: gpu.cu  gpu.h  main.cpp
src/: cov_estimation.cu  gpu.cu  knn_search.cu  test.cu
